# sapiens

./: .gitignore  MANIFEST.in  main.py  pyproject.toml  setup.py
lite/demo/: seg_utils.py
sapiens_lite/: __init__.py  seg_utils.py
