[project]
name = "sapiens-lite"
version = "1.0.0"
description = "Sapiens-Lite: Optimized inference-only solution for human segmentation"
readme = "INSTALL.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Meta Platforms, Inc."}
]
keywords = ["human segmentation", "deep-learning", "pytorch", "computer vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "imageio>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/facebookresearch/sapiens"
Documentation = "https://github.com/facebookresearch/sapiens/tree/main/lite"
Repository = "https://github.com/facebookresearch/sapiens"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sapiens_lite"]
